# neuro-dashboards

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
neuro_dashboards/timeseries_viewer/: app.py
neuro_dashboards/utils/: parcellations.py
tests/test_utils/: test_parcellations.py
timeseries_viewer/: app.py
